update student data with new observations

--- a/chapter-6.ipynb
+++ b/chapter-6.ipynb
@@ -38,25 +38,17 @@
     "\n",
     "## 6.1 Explanation\n",
     "\n",
-    "Examining distributions of single variables is always an important starting place. But as data analysts, our interests usually go beyond exploring patterns of variation in a single variable. We want to know patterns among multiple variables. Did something else cause the variable we care about? Are there other similar variables? In this section we begin thinking about how to work with multiple variables at once.\n",
+    "Examining distributions of single variables is always an important starting place. This helps us describe that variable in an efficient way, which is one of the central goals of statistics. But as data analysts, our interests usually go beyond exploring patterns of variation in a single variable. Sometimes we want to predict what data of that variable will look like, or sometimes we want to make inferences about connections between multiple variables. To do these goals of statistics, we need to consider multiple variables at once. \n",
     "\n",
-    "We can start with an intuitive definition of “explain”: if knowing someone’s score on one variable helps you make a slightly better guess about that person’s score on another variable, then we can say that the first variable *explains* some variation in the second variable.\n",
+    "When using information about one variable to help us predict/understand another variable, we would say the first variable helps **explain** the second. If knowing someone’s score on one variable helps you make a slightly better guess about that person’s score on another variable, then we can say that the first variable explains some variation in the second variable.\n",
     "\n",
     "For example, if we knew someone’s sex, could that help us make a better prediction of their height? You probably already have a sense that human males are taller, on average, than females. If we knew that someone was male, even without meeting them, we would predict that they would be taller than if we knew they were female.\n",
     "\n",
-    "This is what we mean when we say sex *explains* some of the variation in height. It doesn’t explain all the variation because some females are taller than some males. But it does explain some of the variation.\n",
+    "This is what we mean when we say sex explains some of the variation in height. It doesn’t explain all the variation because some females are taller than some males. But it does explain some of the variation.\n",
     "\n",
-    "Explaining variation could help us in three ways: \n",
+    "It's important to emphasize here that when we say one variable A \"explains\" another variable B, we don't always mean that A *causes* B. Correlation does not imply causation! It just means that knowing the value of some observation on A improves our guess on what B is. This could be because of causation, but it could also be a host of many different relationships (maybe B causes A instead, or a separate variable C causes both of them!). Whenever we use the word \"explain\" in this course, make sure you're not automatically assuming that a causal relationship is involved.  \n",
     "\n",
-    "1) it helps us understand what causes the variation in a variable\n",
-    "\n",
-    "2) it helps us predict future observations \n",
-    "\n",
-    "3) or, it helps us change the system we are studying to produce different outcomes\n",
-    "\n",
-    "It's important to emphasize here that when we say one variable A \"explains\" another variable B, we don't always mean that A *causes* B. Correlation does not imply causation! It just means that knowing the value of some observation on A improves our guess on what B is. This could be because of causation, but it could also be a host of many different relationships (maybe B causes A instead, or a separate variable C causes both of them!). Whenever we use the word \"explain\" in this course, make sure you're not assuming that a causal relationship is involved.  \n",
-    "\n",
-    "In this chapter we develop some informal methods for representing and exploring relationships among variables. We start by graphing relationships between two variables, looking for evidence that one variable explains variation in another, and representing these relationships with word equations. (In later chapters we will introduce more quantitative methods for representing relationships using the concept of a *statistical model*.)"
+    "The kind of statistics that link multiple variables together is called **inferential statistics**. However in this chapter we won't actually learn those quantitative tools yet - we'll spend a lot of time on them in the next unit. Instead we will develop some informal intuitions for understanding connections between variables and will grow our data visualization skills that help us see these relationships. "
    ]
   },
   {
@@ -66,7 +58,7 @@
    "source": [
     "## 6.2 Explaning one variable with another\n",
     "\n",
-    "Let's start by loading a simple dataset that plots the length of fingers from a sample of students in a stats class, along with some other demographic info. "
+    "Let's start by loading a simple dataset that includes information about stats students:"
    ]
   },
   {
@@ -78,7 +70,7 @@
    },
    "outputs": [],
    "source": [
-    "fingers <- read_csv(\"https://raw.githubusercontent.com/smburns47/Psyc158/main/fingers.csv\")"
+    "studentdata <- read_csv(\"https://raw.githubusercontent.com/smburns47/Psyc158/main/studentdata.csv\")"
    ]
   },
   {
@@ -809,7 +801,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.1.2"
+   "version": "4.2.3"
   }
  },
  "nbformat": 4,
