--- a/chapter-9.ipynb
+++ b/chapter-9.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "[Back to Table of Contents](https://www.shannonmburns.com/Psyc158/intro.html)\n",
     "\n",
-    "[Previous: Chapter 8 - the Data Generation Process](https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-8.ipynb)"
+    "[Previous: Chapter 8 - Where Data Come From](https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-8.ipynb)"
    ]
   },
   {
@@ -30,7 +30,7 @@
    "id": "d96d05cc",
    "metadata": {},
    "source": [
-    "# Chapter 9 - Statistical Models\n",
+    "# Chapter 9 - Modeling the Data Generation Process\n",
     "\n",
     "In the prior chapter we learned about deterministic models, where we know how variables are related; and we learned about probability models, where we know the full population of data that we can do probability calculations on. \n",
     "\n",
@@ -43,32 +43,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e035a15",
+   "id": "02422bf1",
    "metadata": {},
    "source": [
-    "## 9.1 From populations to samples\n",
+    "## 9.2 What is a model\n",
     "\n",
-    "The \"*some* data\" part of the sentence above is really important for distinguishing statistical models from probability models. In the previous chapter we discussed how knowing a probability model allows us to predict outcomes of future events. Even in cases where we don't know the data generation process, we can still create an accurate probability model if we know the entire **population** of outcomes - AKA, all possible outcomes. For example, if we wanted to know the probability that someone in the US had COVID-19 right now, and if we were able to test every individual in the country right this moment, we'd be able to count how many people were covid-positive out of the entire group and calulate probability that way. The population is all possible people in the group we want to understand, so if we have data from that entire group, we can calculate summaries and probabilities really easily. \n",
-    "\n",
-    "However, it is almost always impractical, or straight up impossible, to collect data from the entire population you care about. If a psychologist cares about a general question like \"the way humans think,\" there's no way they can test every human on the planet in order to generate an accurate distribution of the population data. This is why you can never *prove* something in statistics - you never definitively know all the possibilities. \n",
-    "\n",
-    "Instead, one of the foundational ideas in statistics is that we can make guesses about the features of an entire population based on a smaller **sample** of individuals from that population. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "72c4d902",
-   "metadata": {},
-   "source": [
-    "## 9.2 The sampling process\n",
-    "\n",
-    "Anyone living in the United States will be familiar with the concept of sampling from the political polls that have become a central part of our electoral process. In some cases, these polls can be incredibly accurate at predicting the outcomes of elections. The best known example comes from the 2008 and 2012 US Presidential elections, when the pollster Nate Silver correctly predicted electoral outcomes for 49/50 states in 2008 and for all 50 states in 2012. Silver did this by combining data from 21 different polls, each of which included data from about 1000 likely voters. If we consider the population of interest during an election to be all the votes of people who cast a vote, then in this case the intentions of that 1000-person sample very closely matched the overall voting behavior of the entire electorate. Yet, the 2016 US Presidential election was noteworthy for how *badly* polls predicted the outcome (Clinton was strongly favored to win by many polling samples, but the electorate behaved differently). This illustrates the extreme importance of picking a sample that is **representative** of your population of interest.\n",
-    "\n",
-    "Since you don't know the population distribution (which is the whole reason we're sampling data in the first place), it can be hard to know how representative a sample is. Over time, statisticians have figured out that the best way to pick a sample that most closely resembles the shape, center, and variability of the target population is to draw a **random sample,** where every member of the population has an equal chance of getting picked for the sample. This is also usually impractical, though. For a psychologist, it's not as easy to contact, recruit, or even know about some people in the population compared to others (indeed, the data in psychology results are often based on an over-representation of US psychology students, since universities require their psych majors to participate in studies!). For an ecologist, it is much easier to access animals that live in one site nearby, versus the same species that lives in a remote canyon. You can probably think of examples in other fields of study that make it hard to sample every member of the population at equal likelihood. \n",
-    "\n",
-    "Instead, there are a variety of more practical sampling methods that are easier to do, and which one *hopes* is mostly similar to what a random sample looks like. The most common type is that described above, where the sample is comprised of datapoints that were the easiest to obtain. This is called **convenience sampling.** The samples are chosen in a way that is convenient to the researcher. In real life, most studies are convenience samples of one form or another. This sometimes does a good job of creating a random sample, but can instead create a **biased sample** if there's some reason for why the sample is easier to collect that also affects the variables being studied. E.g., can you think of any way psychology students might differ from students of other majors? There are other types too that are less common that you may learn about in other classes (.e.g, stratified sampling, snowball sampling, etc.). Whatever sampling method you use, the most important thing to keep in mind is how likely it is to create a representative sample, and what factors to watch out for that might contribute to bias. \n",
-    "\n",
-    "In addition, it is important to know the difference between **sampling with replacement** and **sampling without replacement.** With replacement means that, after picking a data point out of the entire population for inclusion in the sample, you record its value and then put it back \"into the bag\" of the population, so that it has a chance of being selected again. Without replacement is the opposite - once a data point is recorded, it can't be selected again. In real world data collection, you almost always use sampling without replacement because you want to collect as much unique information in your data as possible. I.e., once someone has participated in your study, you don't let them participate again. However, for some theoretical or simulating procedures, sampling with replacement is an underlying assumption. "
+    "- deterministic models in other domains; consists of inputs and their relationships"
    ]
   },
   {
