switch to read.csv() for package simplicity

--- a/chapter-7.ipynb
+++ b/chapter-7.ipynb
@@ -19,10 +19,8 @@
    "source": [
     "# This chapter uses some packages that take a few minutes to download on Google Colab. \n",
     "# Run this first so it's ready by the time you need it\n",
-    "install.packages(\"readr\")\n",
     "install.packages(\"ggformula\")\n",
     "install.packages(\"dplyr\")\n",
-    "library(readr)\n",
     "library(ggformula)\n",
     "library(dplyr)"
    ]
@@ -90,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "studentdata <- read_csv(\"https://raw.githubusercontent.com/smburns47/Psyc158/main/studentdata.csv\")"
+    "studentdata <- read.csv(\"https://raw.githubusercontent.com/smburns47/Psyc158/main/studentdata.csv\")"
    ]
   },
   {
