--- a/chapter-9.ipynb
+++ b/chapter-9.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This chapter uses the package ggformula, which takes a few minutes to download on Google Colab. \n",
+    "# This chapter uses the package ggformula, which takes a few moments to download on Google Colab. \n",
     "# Run this first so it's ready by the time you need it\n",
     "install.packages(\"ggformula\")\n",
     "install.packages(\"dplyr\")\n",
@@ -32,23 +32,44 @@
    "source": [
     "# Chapter 9 - Modeling the Data Generation Process\n",
     "\n",
-    "In the prior chapter we learned about deterministic models, where we know how variables are related; and we learned about probability models, where we know the full population of data that we can do probability calculations on. \n",
+    "## 9.1 What is a model\n",
     "\n",
-    "Next is statistical models, where we don't have either. We have *some* data, and maybe we have *some* idea about what variables are important, so we try to build a simplified model based on this limited viewpoint we have.  \n",
+    "In the prior chapter we began to talk about the data generation process. To understand the data generation process is to break down what other factors create the distribution of an outcome variable. If anything, this is *the* idea underlying the use of statistics in psychology. The majority of this field is dedicated to studying the data generation process for the how the human mind works. So this is a concept to pay attention to! \n",
     "\n",
-    "<img src=\"images/ch9-probvsstats.png\" width=\"700\">\n",
+    "The framework we use to describe the data generation process is called a **model**. A model captures:\n",
     "\n",
-    "*[Image source](https://towardsdatascience.com/probability-vs-statistics-for-data-science-and-machine-learning-84f00bf67ce1#:~:text=Probability%20and%20Statistics,-Probability%20is%20the&text=One%20typically%20learn%20probability%20before,enhance%20one's%20appreciation%20of%20probability.)*"
+    "1) The inputs that go into creating the output\n",
+    "2) The relationships among all variables in the process\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "02422bf1",
+   "id": "5dd4bbcb",
    "metadata": {},
    "source": [
-    "## 9.2 What is a model\n",
+    "## 9.2 Deterministic models\n",
     "\n",
-    "- deterministic models in other domains; consists of inputs and their relationships"
+    "Sometimes we understand a data generation process really well. This means we are able to build a detailed model of it. Consider a concept like gravity: more than 300 years ago, Isaac Newton described an equation for the gravitational force between two objects.\n",
+    "\n",
+    "$$gravitational force = G\\frac{m_1*m_2}{r^2}$$\n",
+    "\n",
+    "This equation is a model because it describes both the inputs that determine the value of gravitational force (object masses, the distance between them, and a force parameter G), and it describes the relationships between these inputs and the output (multiply the masses together, divide by the square of the distance, multiply all by G).\n",
+    "\n",
+    "This model is very accurate. For essentially any two bodies of mass, plugging in the appropriate input values to this model will creat a prediction of gravitational force that matches what actually occurs. Highly accurate models like this, where we fully understand the data generation process and can accurately make predictions of outcomes, are called **deterministic models**. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9965a5b6",
+   "metadata": {},
+   "source": [
+    "## 9.3 Conceptual models\n",
+    "\n",
+    "Unfortunately for us as psychologists (and also much of the life sciences), we rarely get to work with deterministic models. As complex as the math seems in many physics problems, it is only possible to come up with that math in the first place because the data generation processes are relatively simple. When it comes to human thought and behavior, there are so many inputs and relationships among them that we have only begun to scratch the surface of the data generation process.\n",
+    "\n",
+    "Consider a relatively simple psychological phenomenon, such as  \n",
+    "\n",
+    "This doesn't mean we can't model it. But it does mean we have to relax our standards a bit of what a model is. In this case, we can build a **conceptual model** of "
    ]
   },
   {
