update studentdata with new class responses

--- a/chapter-9.ipynb
+++ b/chapter-9.ipynb
@@ -39,7 +39,9 @@
     "The framework we use to describe the data generation process is called a **model**. A model captures:\n",
     "\n",
     "1) The inputs that go into creating the output\n",
-    "2) The relationships among all variables in the process\n"
+    "2) The relationships among all variables in the process\n",
+    "\n",
+    "While a model contains these pieces of information, you can represent a model in different ways. Below are some types of models. "
    ]
   },
   {
