update table of contents with new chapter names

--- a/chapter-10.ipynb
+++ b/chapter-10.ipynb
@@ -22,9 +22,7 @@
     "install.packages(\"ggformula\")\n",
     "library(ggformula)\n",
     "\n",
-    "install.packages(\"readr\")\n",
-    "library(readr)\n",
-    "fingers <- read_csv(\"https://raw.githubusercontent.com/smburns47/Psyc158/main/fingers.csv\")"
+    "studentdata <- read.csv(\"https://raw.githubusercontent.com/smburns47/Psyc158/main/studentdata.csv\")"
    ]
   },
   {
@@ -603,7 +601,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.1.2"
+   "version": "4.2.3"
   }
  },
  "nbformat": 4,
