--- a/chapter-9.ipynb
+++ b/chapter-9.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "187dcd0f",
+   "id": "0544e7cf",
    "metadata": {},
    "source": [
     "## 9.3 Statistical models\n",
@@ -297,7 +297,29 @@
     "\n",
     "Using our tiny data set, we found the mean thumb length to be 62mm. Sticking that value into the equation of a statistical model, if we were predicting what a seventh observation might be, we’d go with 62mm. But if we take the mean and look backwards at the data we have already collected, we could also generate a “predicted” thumb length for each of the data points we already have. This prediction answers the question: what would our model have predicted this thumb length to be if we hadn’t collected the data?\n",
     "\n",
+    "When we create a model and fit it in R, we aren't just printing out the results of the fitting procedure. We are creating a model object. This object has properties we can access with the ```$``` symbol, just as you access variables in a data frame object. When a model object is created, one of its properties ```fitted.values``` is the predictions that model would make for every data point in the dataset. \n",
+    "\n",
     "There’s an R function that will actually do this for you. Here’s how we can use it to generate the predicted thumb lengths for each of the six students in the tiny dataset. Remember, we already fit the model and saved the results in  tiny_empty_model:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a6269e5",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "tiny_empty_model$fitted.values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f640177",
+   "metadata": {},
+   "source": [
+    "If you forget about that model object property, there’s also an R function ```predict()``` to access them and return them to you. Remember, there are often multiple ways to do the same thing in R, so pick whichever way you want to \"speak\" it!  "
    ]
   },
   {
@@ -396,7 +418,25 @@
    "id": "a20ab346",
    "metadata": {},
    "source": [
-    "These residuals (or “leftovers”) are so important in modeling that there is an even easier way to get them in R. Again, we will use the results of our model fit, which we saved in the R object ```tiny_empty_model```:"
+    "These residuals (or “leftovers”) are so important in modeling that they are also saved as a property of the model object when it is created, called ```residuals```."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98c5060a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tiny_empty_model$residuals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a51efa19",
+   "metadata": {},
+   "source": [
+    "Or if you prefer the function route, using the ```resid()``` function:"
    ]
   },
   {
@@ -414,7 +454,7 @@
    "id": "66f4877a",
    "metadata": {},
    "source": [
-    "Notice that we get the same numbers. But instead of passing the data and the model’s predictions as arguments, we just tell R which model to get the residuals from.\n",
+    "Notice that we get the same numbers as the ones we calculated previously. But instead of passing the data and the model’s predictions as arguments, we just tell R which model to get the residuals from.\n",
     "\n",
     "Modify the following code to save the residuals that we get using the ```resid()``` function in the ```tiny_data``` data frame. Give the resulting variable a new name ```easy_residual```."
    ]
