--- a/chapter-3.ipynb
+++ b/chapter-3.ipynb
@@ -458,9 +458,9 @@
    "outputs": [],
    "source": [
     "# 4 places, coded by zipcode\n",
-    "places_num <- c(01267, 01002, 19081, 91711)\n",
+    "places_num <- c(01267, 01002, 19081, 91711, 91711)\n",
     "places_factor <- factor(places_num, levels = c(01267, 01002, 19081, 91711), \n",
-    "                        labels = c(\"williams\", \"amherst\", \"swarthmore\", \"pomona\"))\n",
+    "                        labels = c(\"williamstown\", \"amherst\", \"swarthmore\", \"claremont\"))\n",
     "# if your command is too wide, hit return after a comma to make it wrap around on a new line, indented\n",
     "\n",
     "places_factor"
@@ -473,7 +473,7 @@
    "source": [
     "This looks complicated - why are there now ```=``` signs and other words in our function? At this point we'll introduce to you the concept of *named* arguments. A function like ```factor()``` can be run with just one argument, a vector to turn into nominal values, *or* it can take additional arguments. It's flexible like that. But if you're giving it additional arguments, you have to tell the function what each argument is supposed to represent. That's where you get to using the argument's name (```levels``` or ```labels``` in this example), and using the ```=``` sign to tell the function what the value of that specific argument should be. \n",
     "\n",
-    "Here you can think of the input to the ```factor()``` function as having three parts: the variable to recode, the existing values (```levels```), and the ```labels``` to recode the values as. This seems like we have to write out every new label for every data point included in the vector, but this is only because we have all unique values in ```places_num```. If there were any repeated zipcodes, you only have to include it once in the ```levels``` argument, because R ```factor()``` will always assign the matching new label to any data point with that zipcode.\n",
+    "Here you can think of the input to the ```factor()``` function as having three parts: the variable to recode, the existing values (```levels```), and the ```labels``` to recode the values as. You only need to include the unique levels and labels in these arguments - anytime R finds 91711 in the ```places_num``` vector, it will replace it with \"claremont.\" \n",
     "\n",
     "You can also change the values of numeric variables. For example, you have water depth data measured in inches, but you'd prefer to see it in feet. In this case, you will need to transform each value in the vector holding that data. \n",
     "\n",
