update studentdata.csv to remove respondant who gave inches for thumb length instead of mm

--- a/chapter-3.ipynb
+++ b/chapter-3.ipynb
@@ -605,7 +605,7 @@
    "source": [
     "## 3.5 What makes good data?\n",
     "\n",
-    "Data are meant to be a clear, quantitative representation of some quality in the world. However, in many fields such as psychology, the thing that we are measuring is not a physical feature, but instead an unobservable theoretical concept, which we usually refer to as a **construct**. For example, let’s say that we want to test how well you understand the distinction between categorical, ordinal, and interval variables. The professor could give you a pop quiz that would ask you several questions about these concepts and count how many you got right. This would be one way to try and measure the construct that is your knowledge. However, constructs are difficult to measure well. There are several things that can get in the way of good measurement:\n",
+    "Data are meant to be a clear representation of something in the world. However, in many fields such as psychology, the thing that we are measuring is not a physical feature, but instead an unobservable theoretical concept, which we usually refer to as a **construct**. For example, let’s say that we want to test how well you understand the distinction between categorical, ordinal, and interval variables. The professor could give you a pop quiz that would ask you several questions about these concepts and count how many you got right. This would be one way to try and measure the construct that is your knowledge. However, constructs are difficult to measure well. There are several things that can get in the way of good measurement:\n",
     "\n",
     "### Measurement error \n",
     "\n",
