update ch12 for 2023

--- a/chapter-11.ipynb
+++ b/chapter-11.ipynb
@@ -100,7 +100,7 @@
     "<b>Note</b>: We use the term Grand Mean to refer to the mean of the entire sample in order to distinguish it clearly from other means, such as the mean for subgroups within the sample.\n",
     "</div>\n",
     "\n",
-    "It’s useful to illustrate the null model (and what we're about to do to it) with our ```tiny_data``` dataset. ```tiny_data```, you will recall, contains six people’s thumb lengths randomly selected from our complete ```fingers``` dataset. This time, we'll also include their value on the ```Sex``` variable as well. \n"
+    "It’s useful to illustrate the null model (and what we're about to do to it) with our ```tiny_data``` dataset. ```tiny_data```, you will recall, contains six people’s thumb lengths randomly selected from our complete ```studentdata``` dataset. This time, we'll also include their value on the ```Sex``` variable as well. \n"
    ]
   },
   {
@@ -215,8 +215,8 @@
     "\n",
     "Notice also that the estimate for b<sub>0</sub> is labeled “intercept” in the output. You have encountered the concept of intercept before, when you studied the concept of a line in algebra. Remember that ```y = mx + b``` is the equation for a line? *m* represents the slope of the line, and *b* represents the y-intercept. The General Linear Model notation is similar to this. It's like if we drew a line between the prediction for females and the prediction for males: the intercept is the value of Y and X=0 (female) and the effect of the predictor (labeled Sexmale in the output) is the slope between X=0 and X=1 (aka, the difference between males and females).\n",
     "\n",
-    "<img src=\"images/ch11-glmeq.png\" width=\"550\">\n",
-    "<img src=\"images/ch11-glmeq2.png\" width=\"550\">\n",
+    "<img src=\"images/ch11-glmeq.png\" width=\"500\">\n",
+    "<img src=\"images/ch11-glmeq2.png\" width=\"500\">\n",
     "\n",
     "If you want — and it’s a good idea — you can save the results of this model fit in a model object. Here’s the code to save the model fit in an object called ```tiny_sex_model```. Once you’ve saved the model, If you want to see what the model estimates are, you can just type the name of the model and you will get the same output as above."
    ]
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80f8ce33",
+   "id": "79ba99c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "268cde03",
+   "id": "7e410c88",
    "metadata": {},
    "source": [
     "Making a categorical predictor like this into Boolean values is also called making a **dummy variable**. This does not get saved to your data frame - it's just a temporary computation R makes under the hood. You could supply a Sex variable as a Boolean of 0s and 1s already, but if you don't R will automatically translate a categorical variable into a dummy variable for the purpose of fitting the model. \n",
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe238b87",
+   "id": "b4b5cfee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "313b48b5",
+   "id": "0effbbfd",
    "metadata": {},
    "source": [
     "This model has a much smaller PRE - it explains next to no variance in thumb lengths. \n",
@@ -522,7 +522,7 @@
    "source": [
     "## 11.9 A historical note - the t-test\n",
     "\n",
-    "In this course we are relying on the general linear model framework to test our ideas of the data generation process. The main logic of the general linear model is that we can create a (simplified) statistical model that is an estimate of at least part of true data generation process, and see whether predictions using that model are more accurate than predictions made using a null model. \n",
+    "In this course we are relying on the general linear model framework to test our ideas of the data generation process. The main logic of the general linear model is that we can create a (simplified) statistical model that is an estimate of at least a part the of true data generation process, and see whether predictions using that model are more accurate than predictions made using a null model. \n",
     "\n",
     "This is not the only approach to statistics, however. Indeed until recently, it was not the most common. The traditional approach to statistics was to develop a separate tool for each kind of dataset. In addition, the goal wasn't about improving accuracy of data predictions, but describing the distinguishability of data from different groups. In this course it is your professor's opinion that this is not the best way to teach statistics, since it relies on more abstract concepts from the get-go and using separate tests makes it harder to remember the logic of all of them. But because so many researchers learned statistics with these tools, they are often still found in research publications. Thus it would be good for you to at least know what they are, and what version of the general linear model they map onto. \n",
     "\n",
