ch13 change independent predictors to covarying predictors for clarity

--- a/chapter-13.ipynb
+++ b/chapter-13.ipynb
@@ -444,7 +444,7 @@
    "id": "a76aae88",
    "metadata": {},
    "source": [
-    "## 13.7 Interpreting non-independent predictors\n",
+    "## 13.7 Interpreting covarying predictors\n",
     "\n",
     "Earlier we fit the coefficients of the full multivariable model as:\n",
     "\n",
@@ -473,7 +473,7 @@
    "source": [
     "This does not give us the same coefficient values as the full multivariable model. ```father_model``` has an intercept b<sub>0</sub> value of 9.2011, ```sibling_model``` has an intercept of 15.095, and the multivariable model calculated 10.3742. There are also differences in the coefficient for the effect of father's education and number of siblings, as well. Why is that, when we're using the same variables to build the model?\n",
     "\n",
-    "This phenomenon happens because of **independence** of the two predictor variables. Or rather, the fact that they are *not* independent from each other. These two variables themselves are related to each other, as we can see in this scatter plot of father's education and number of siblings:"
+    "This phenomenon happens because of **covariance** between the two predictor variables. These two variables themselves are related to each other, as we can see in this scatter plot of father's education and number of siblings:"
    ]
   },
   {
