--- a/chapter-14.ipynb
+++ b/chapter-14.ipynb
@@ -39,9 +39,9 @@
     "\n",
     "In a data generation process, this situation is called **independence**. The effect of each predictor is independent of any other. \n",
     "\n",
-    "However, this isn't always how the data generation process works. Not everything in the world is combined linearly and independently. For example, consider [classic work](https://journals-sagepub-com.ccl.idm.oclc.org/doi/full/10.1111/j.1467-9280.2008.02079.x?casa_token=vmfXzncR8pQAAAAA:B9g_7Z1Pm67d_CCN-UDohTeFlDNC0Ci9GJ-qbZaOmw_DChwntgmzU7FJq2WYQOXzSBvD8iotqIUk) on how men and women are differentially treated for expressing anger in the workplace. When men show anger, they are conferred higher status. A simple conceptual model of this phenomenon then might have anger expressions explaining workplace status.\n",
+    "However, this isn't always how the data generation process works. Not everything in the world is combined linearly and independently. For example, consider [this work](https://journals-sagepub-com.ccl.idm.oclc.org/doi/full/10.1111/j.1467-9280.2008.02079.x?casa_token=vmfXzncR8pQAAAAA:B9g_7Z1Pm67d_CCN-UDohTeFlDNC0Ci9GJ-qbZaOmw_DChwntgmzU7FJq2WYQOXzSBvD8iotqIUk) on how men and women are treated differently for expressing anger in the workplace. When men show anger in response to a problem, they are conferred higher status. A simple conceptual model of this phenomenon then might have anger expressions explaining workplace status.\n",
     "\n",
-    "But this work showed that the effect is different for women. When women show anger, they are conferred less workplace status and may even be punished for it (\"she's being irrational\"). Thus the nature of the effect of anger on explaining workplace status depends on whether or not someone presents as male or female. \n",
+    "But this work showed that the effect is different for women. When women show anger during a problem, they are conferred less workplace status and may even be punished for it (\"she's being irrational\"). Thus the nature of the effect of anger expression on explaining workplace status depends on whether or not someone presents as male or female. \n",
     "\n",
     "<img src=\"images/ch14-interactionmod.png\" width=500>\n",
     "\n",
@@ -53,7 +53,7 @@
     "\n",
     "## 14.2 Specifying an interaction model\n",
     "- Review multivariable model with independence - define main effects (current 14.6 section but with above example)\n",
-    "- Include diagrams, show how the regression line for men has a different slope than for women - define simple effects\n",
+    "- Include diagrams, show how the regression line for men has a different slope than for women - define moderator and simple effects\n",
     "- To include interaction, we need an additional term that will change the prediction based on *both* values\n",
     "- Also show interactions between two continuous predictors\n",
     "\n",
